--- a/WebApp/Views/Auth/SignIn.cshtml
+++ b/WebApp/Views/Auth/SignIn.cshtml
@@ -27,7 +27,7 @@
 				</div>
 				<a>Forgot Password?</a>
 			</div>
-			<input class="btn-sign-in" type="submit" value="Log In" />
+			<input class="btn-primary" type="submit" value="Log In" />
 		</form>
 		<span class="redirect-to-register">Don't have an account? <a asp-area="Identity" asp-controller="Auth" asp-action="Register">Sign Up</a></span>
 	</div>
