--- a/WebApp/wwwroot/css/header.css
+++ b/WebApp/wwwroot/css/header.css
@@ -18,7 +18,6 @@
     i{
          font-size: 20px;
      }
-
 }
 .input-search {
     background-color: var(--bg-light);
@@ -60,4 +59,20 @@
     display: flex;
     align-items: center;
     gap: 0.6rem;
+}
+.logged-in{
+    place-content: center;
+    position: relative;
+}
+.dropdown-log-in{
+    width: 300px;
+    right: 90%;
+    top: 70%;
+}
+.header-username{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    border-bottom: solid 1px lightgray;
+    padding-bottom: 0.5rem;
 }
