--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 			Stay on top of your work with a clean,
 			intuitive interface that keeps everything structured and accessible.</p>
 
-		<button>
+		<button class="btn-primary">
 			Sign up for free today
 		</button>
 	</div>
