--- a/WebApp/Views/Shared/Partials/_EditProjectPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/_EditProjectPartial.cshtml
@@ -2,13 +2,13 @@
 
 <div class="add-project-modal" id="project-modal">
 	<div class="modal-content">
-		<h1>Add Project</h1>
+		<h1>Edit Project</h1>
 		<div class="project-select-icon">
 			<button>
 				icon
 			</button>
 		</div>
-		<form method="post" asp-controller="Project" asp-action="AddProject" novalidate>
+		<form method="post" asp-controller="Project" asp-action="UpdateProject" novalidate>
 			<input type="hidden" asp-for="Form.Id" />
 			<div class="project-name-field">
 				<label class="field-label" asp-for="Form.ProjectName"></label>
@@ -17,45 +17,50 @@
 			</div>
 			<div class="client-name-field">
 				@Html.DropDownListFor(
-					model => model.Form.ClientId,
-					new SelectList(Model.Clients, "Id", "ClientName"),
-					"Select a client",
-					new { @class = "text-input" }
-				)
+									model => model.Form.ClientId,
+									new SelectList(Model.Clients, "Id", "ClientName"),
+									"Select a client",
+									new { @class = "text-input" }
+									)
 			</div>
 			<div class="description-field">
 				<label class="field-label" asp-for="Form.ProjectDescription"></label>
 				<textarea class="text-input description-input" asp-for="Form.ProjectDescription"></textarea>
-				<span asp-validation-for="Form.ProjectDescription"></span>
 			</div>
 			<div class="date-field">
 				<div>
 					<label class="field-label" asp-for="Form.StartDate"></label>
 					<input class="text-input date-input" type="date" asp-for="Form.StartDate" />
-					<span asp-validation-for="Form.StartDate"></span>
 				</div>
 				<div>
 					<label class="field-label" asp-for="Form.EndDate"></label>
 					<input class="text-input date-input" type="date" asp-for="Form.EndDate" />
-					<span asp-validation-for="Form.EndDate"></span>
 				</div>
 			</div>
 			<div class="team-member-field">
 				<label class="field-label" asp-for="Form.TeamMemberIds">Team Members</label>
 				<select asp-for="Form.TeamMemberIds"
-					asp-items="@(new MultiSelectList(Model.TeamMembers, "Id", "FullName"))"
-					multiple
-					class="text-input"
-					size="5">
+						asp-items="@(new MultiSelectList(Model.TeamMembers, "Id", "FullName"))"
+						multiple
+						class="text-input"
+						size="5">
 				</select>				
 			</div>
 			<div class="budget-field">
 				<label class="field-label" asp-for="Form.Budget"></label>
 				<input class="text-input" type="number" asp-for="Form.Budget" step="0.01" value="@Model.Form.Budget.ToString(System.Globalization.CultureInfo.InvariantCulture)" />
-				<span asp-validation-for="Form.Budget"></span>
+
 			</div>
-			<input type="submit" value="Create" class="btn-primary"/>
+			<div class="status-field">
+				<label asp-for="Form.StatusId"></label>
+				@Html.DropDownListFor(
+									model => model.Form.StatusId,
+									new SelectList(Model.Statuses, "Id", "StatusName"),
+									"Select Status",
+									new { @class = "text-input" }
+									)
+			</div>
+			<input type="submit" value="Update" class="btn-primary" />
 		</form>
 	</div>
 </div>
-@await Html.PartialAsync("_ValidationScriptsPartial")
