--- a/WebApp/Views/Shared/Partials/_HeaderPartial.cshtml
+++ b/WebApp/Views/Shared/Partials/_HeaderPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="header-flex">
+﻿
+<div class="header-flex">
 	<form class="input-form">
 		<i class="fa-solid fa-magnifying-glass"></i>
 		<input class="input-search" type="text" placeholder="Search..." />
@@ -12,8 +13,21 @@
 		</button>
 	</div>
 	@if (SignInManager.IsSignedIn(User))
-	{
-		<a class="sign-in" asp-area="Identity" asp-controller="Auth" asp-action="SignOut">sign Out <i class="fa-solid fa-right-to-bracket"></i></a>
+	{		
+		<div class="logged-in dropdown-container" data-type="dropdown">
+			<img src="/images/avatar.svg"/>
+				<div class="dropdown dropdown-log-in">
+					<div class="header-username">
+						<img src="/Images/avatar.svg" />
+						<span id="full-name"></span>
+					</div>
+					<a asp-action="SignOut" asp-controller="Auth" asp-area="Identity">
+						<i class="fa-solid fa-right-from-bracket"></i>
+						<span>Sign Out</span>
+					</a>
+
+				</div>
+		</div>
 	}
 	else
 	{
