--- a/WebApp/wwwroot/css/projectCard.css
+++ b/WebApp/wwwroot/css/projectCard.css
@@ -2,7 +2,7 @@
     width: 340px;
     height: 270px;
     background-color: white;
-    margin: 2rem;
+    margin: 1.6rem;
     border-radius: 10px;
     box-shadow: 1px 1px 4px gray;
     display: grid;
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     gap: 1rem;
-    grid-row: 1/2;
+    position: relative;
 }
 .project-icon {
     width: 54px;
@@ -38,19 +38,22 @@
           color: gray;
       }
 }
-.project-menu{
+.project-menu {
     transform: rotate(90deg);
+    
 }
-.btn-project-menu{
+.btn-project-menu {
     width: 20px;
-    margin-left: 2.5rem;
-    margin-bottom: 1.5rem;
     background-color: transparent;
+    position: absolute;
+    left: 90%;
+    top: 20%;
     &:hover{
                cursor:pointer; 
            }
 }
 .card-description{
+    max-width: 350px;
     padding-left: 1rem;
     padding-right: 1rem;
     grid-row: 2/5;
@@ -76,4 +79,29 @@
     gap: 0.5rem;
     font-size: 14px;
     border-radius: 5px;
+}
+.divider-line{
+    border-bottom: 1px solid lightgray;
+}
+.btn-delete{
+    color: var(--warning-red);
+    &:hover{
+            background-color: rgb(255, 0, 0, 0.05) !important;
+           }
+}
+
+.dropdown-edit {
+    right: 4%;
+    top: 40%;
+        button{
+              display: flex;
+              gap: 1rem;
+              width: 200px;
+              padding: 0.5rem;
+              border-radius: 8px;
+              background-color: var(--dropdown-bg);
+              &:hover{
+                         background-color: var(--bg-light);
+                     }
+          }
 }
