--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -1,11 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 :root {
+    --font: "Nunito", sans-serif;
+    --font-comfortaa: "Comfortaa", sans-serif;
     --bg-light: #F1F3F7;
     --accent: #2D99FF;
     --accent-opacity: rgb(45, 153, 255, 0.1);
     --heading: #1A1926;
+    --grey-100: #F5F7FA;
     --grey-200: #EBEEF2;
+    --grey-300: #E8EAED;
+    --grey-400: #E3E5E8;
+    --dropdown-bg: #FFFFFF;
+    --warning-red: #FF6640;
+    --text-color: #637085;
 }
 
+/* html, body*/
+html, body{
+    font-family: var(--font);
+}
 .wrapper {
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -30,8 +43,8 @@
         width: 960px;
     }
 
-    @media(width >= 1400px) {
-        width: 1320px;
+    @media(width >= 1500px) {
+        width: 1440px;
     }
 }
 
@@ -70,6 +83,8 @@
     margin-top: 2rem;
     font-size: 1.5rem;
 }
+
+/*Fields*/
 .text-input {
     width: 100%;
     height: 40px;
@@ -86,4 +101,32 @@
     left: 0;
     top: 72%;
     color: red;
+}
+
+/*Dropdown*/
+
+.dropdown {
+    background-color: var(--dropdown-bg);
+    border-radius: 8px;
+    color: var(--heading);
+    padding: 0.5rem;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    display: none;
+}
+
+/*Buttons*/
+
+.btn-primary {
+    width: 100%;
+    height: 45px;
+    margin-top: 1.5rem;
+    border-radius: 12px;
+    background-color: var(--accent);
+    color: white;
+    &:hover{
+               cursor: pointer;
+           }
 }
