fixed role not being set

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -10,9 +10,10 @@
 			and monitor progress—all in one place.
 			Stay on top of your work with a clean,
 			intuitive interface that keeps everything structured and accessible.</p>
-
-		<button class="btn-primary">
-			Sign up for free today
-		</button>
+		<a asp-action="Register" asp-controller="Auth">
+			<button class="btn-primary">
+				Sign up for free today
+			</button>
+		</a>
 	</div>
 </div>
